--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 		</header>
 		<div class="social-icons__wrapper container">
 			<div class="social-icons">
-				<a href="#" class="social-icons__link"><img src="img/icons/facebook.png" alt="#" class="social-icons__img facebook-icon"></a>
-				<a href="#" class="social-icons__link"><img src="img/icons/rss.png" alt="#" class="social-icons__img rss-icon"></a>
-				<a href="#" class="social-icons__link"><img src="img/icons/twitter.png" alt="" class="social-icons__img wifi-icon"></a>
+				<a href="#" class="social-icons__link facebook-icon" aria-label="facebook icon"></a>
+				<a href="#" class="social-icons__link rss-icon" aria-label="rss icon"></a>
+				<a href="#" class="social-icons__link twitter-icon" aria-label="twitter icon"></a>
 			</div>
 		</div>
 		
@@ -152,14 +152,14 @@
 			</section>
 			<div class="news-section__images-wrapper">
 				<div class="news__image-card">
-					<img src="img/news/news_1_1.jpg" alt="#" class="news__image">
+					<img src="img/news/news_1_1.jpg" alt="photo news #1" class="news__image">
 					<h3 class="news__image-title">Lorem ipsum dolor sit amet</h3>
 					<p class="news__image-date">
 						24th February 2012
 					</p>
 				</div>
 				<div class="news__image-card">
-					<img src="img/news/news_1_2.jpg" alt="#" class="news__image">
+					<img src="img/news/news_1_2.jpg" alt="photo news #2" class="news__image">
 					<h3 class="news__image-title">Dolor sit amet consecte tur adipiscing elit.</h3>
 					<p class="news__image-date">
 						24th February 2012
@@ -182,14 +182,14 @@
 			</section>
 			<div class="news-section__images-wrapper">
 				<div class="news__image-card">
-					<img src="img/news/news_2_1.jpg" alt="#" class="news__image">
+					<img src="img/news/news_2_1.jpg" alt="photo news #3" class="news__image">
 					<h3 class="news__image-title">Lorem ipsum dolor sit amet</h3>
 					<p class="news__image-date">
 						24th February 2012
 					</p>
 				</div>
 				<div class="news__image-card">
-					<img src="img/news/news_2_2.jpg" alt="#" class="news__image">
+					<img src="img/news/news_2_2.jpg" alt="photo news #4" class="news__image">
 					<h3 class="news__image-title">Dolor sit amet consecte tur adipiscing elit.</h3>
 					<p class="news__image-date">
 						24th February 2012
@@ -216,11 +216,10 @@
 				</label>
 			</div>
 			<div class="social-icons footer-icons">
-				<a href="#" class="social-icons__link footer-icons__link"><img src="img/icons/facebook.png" alt="#" class="social-icons__img facebook-icon"></a>
-				<a href="#" class="social-icons__link footer-icons__link"><img src="img/icons/rss.png" alt="#" class="social-icons__img rss-icon"></a>
-				<a href="#" class="social-icons__link footer-icons__link"><img src="img/icons/twitter.png" alt="" class="social-icons__img wifi-icon"></a>
+				<a href="#" class="social-icons__link facebook-icon" aria-label="facebook icon"></a>
+				<a href="#" class="social-icons__link rss-icon" aria-label="rss icon"></a>
+				<a href="#" class="social-icons__link twitter-icon" aria-label="twitter icon"></a>
 			</div>
-
 			<span class="footer__copyright">
 				Copyright 2012 Footer here
 			</span>
