v.0.1.0 fixed image size when scaling, styled text

--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="style.css">
 	<title>name</title>
 </head>
 <body>
+
+	<!-- start header section -->
+
 	<div class="header-wrapper">
 
 		<header class="header">
@@ -44,7 +48,13 @@
 			</div>
 		</div>
 	</div>
+
+	<!-- end header section -->
+
 	<div class="section-separator"></div>
+
+	<!-- start description area -->
+
 	<div class="description-area container">
 		<cite class="description__cite">
 			<h2 class="cite__header">Design agency <span>of the year 2012</span></h2>
@@ -61,7 +71,11 @@
 		</div>
 	</div>
 
+	<!-- end description area -->
+
 	<div class="section-separator max-content-width"></div>
+
+	<!-- start persons slider -->
 
 	<section class="persons-slider-section">
 		<input type="button" value="<" class="person-slider__button" >
@@ -98,7 +112,11 @@
 		<input type="button" value=">" class="person-slider__button" >
 	</section>
 
+	<!-- end persons slider -->
+
 	<div class="section-separator max-content-width"></div>
+
+	<!-- start article section -->
 
 	<section class="article-section container">
 		<div class="article__cite-wrapper">
@@ -119,7 +137,7 @@
 		</div>
 		<div class="article__cite-wrapper">
 			<h3 class="article__title">
-				Unique design <span>shoe house</span>
+				pump PSD <span>a free photoshop file</span>
 			</h3>
 			<article class="article__cite">
 				<p class="paragraph-right">
@@ -135,7 +153,11 @@
 		</div>
 	</section>
 
+	<!-- end article section -->
+
 	<div class="section-separator max-content-width"></div>
+
+	<!-- start news section -->
 
 	<section class="news-section container">
 		<div class="news-section-block">
@@ -171,7 +193,7 @@
 		<div class="news-section-block">
 			<section class="news-section__news-wrapper">
 				<h3 class="article__title">
-					Latest <span>exiciting news</span>
+					From the <span>freshest of desks</span>
 				</h3>
 				<p>
 					Quisque gravida felis eu massa consectetur at malesuada nibh porttitor. 
@@ -199,9 +221,13 @@
 		</div>
 	</section>
 
+	<!-- end news section -->
+
 	<div class="section-separator max-content-width"></div>
 	<div class="empty-space max-content-width"></div>
 	<div class="section-separator"></div>
+
+	<!-- footer section -->
 
 	<div class="footer-wrapper">
 		
@@ -211,7 +237,7 @@
 					Quisque turpis lorem, vehicula eget rhoncus vel, ultricies ac mauris. Morbi lectus velit, tincidunt congue pharetra eu, varius nec libero. Vivamus justo risus, dignissim ac vestibulum eget, egestas rutrum magna. Etiam malesuada nisi et nisl volutpat tristique. 
 				</p>
 				<label class="footer__form">
-					<input type="text" value="Join Our Newsletter Here" class="footer__form__text-input">
+					<input type="text" placeholder="Join Our Newsletter Here" class="footer__form__text-input" required>
 					<input type="submit" value="Join" class="footer__form__button">
 				</label>
 			</div>
