v.0.3.1 added dropdown-menu

--- a/index.html
+++ b/index.html
@@ -19,7 +19,15 @@
 				</a>
 				<nav class="header__nav">
 					<ul class="nav__container">
-						<li class="nav__item"><a href="#" class="nav__item-link">home</a></li>
+						<li class="nav__item home-item"><a href="#" class="nav__item-link">home</a>
+							<div class="dropdown-menu">
+								<a href="#" class="dropdown-menu__item">Web Design</a>
+								<a href="#" class="dropdown-menu__item">Graphic Design</a>
+								<a href="#" class="dropdown-menu__item">Logo Design</a>
+								<a href="#" class="dropdown-menu__item">Ui Experience</a>
+								<a href="#" class="dropdown-menu__item">Personal Work</a>
+							</div>
+						</li>
 						<li class="nav__item"><a href="#" class="nav__item-link">products</a></li>
 						<li class="nav__item"><a href="#" class="nav__item-link">services</a></li>
 						<li class="nav__item"><a href="#" class="nav__item-link">our work</a></li>
