--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="style.css">
-	<title>name</title>
+	<title>Create</title>
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
+	<script src="script.js" defer></script>
 </head>
 <body>
 
@@ -50,9 +52,13 @@
 				<div class="news-line__text">
 					<span class="news-line__title">Lastest news</span>
 					<span class="news-line__separator">|</span>
-					<span class="news-line__message">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </span>
+					<span class="news-line__message current-news">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </span>
 				</div>
-				<div class="image-indicator">...in dev</div>
+				<div class="image-indicator">
+					<div class="image-indicator__point"></div>
+					<div class="image-indicator__point"></div>
+					<div class="image-indicator__point"></div>
+				</div>
 			</div>
 		</div>
 	</div>
