v.0.5.1 fixed news-line on large screens

--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
 			<div class="news-line__wrapper container">
 				<div class="news-line__text">
 					<span class="news-line__title">Lastest news</span>
-					<span class="news-line__separator">|</span>
-					<span class="news-line__message current-news">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </span>
+					<div class="news-line__message-wrapper">
+							<span class="news-line__message current-news">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </span>
+					</div>
 				</div>
 				<div class="image-indicator">
 					<div class="image-indicator__point"></div>
