v.0.6.0 Added animations and buttons functionality in the description section

--- a/index.html
+++ b/index.html
@@ -71,18 +71,9 @@
 	<!-- start description area -->
 
 	<div class="description-area container">
-		<cite class="description__cite">
-			<h2 class="cite__header">Design agency <span>of the year 2012</span></h2>
-			<p class="cite__top-article">
-				Quisque gravida felis eu massa consectetur at malesuada nibh porttitor. Nam nunc nulla, tempus at viverra sit amet, semper nec diam. Phasellus tellus elit, placerat sit amet convallis at, bibendum vitae nisi. Phasellus vulputate consequat felis nec sagittis. Sed eget lectus in elit pretium euismod feugiat quis felis.
-			</p>
-			<p class="cite__bottom-article">
-				Fusce ornare nulla at quam commodo non venenatis odio blandit. Donec sit amet nunc justo. Fusce ullamcorper, lacus sed lacinia fringilla, massa urna vulputate ante, vitae pharetra enim nibh nec diam. Nunc vestibulum convallis massa sit amet consectetur. Aenean porttitor velit a risus sodales lobortis eu sed nibh. Vivamus at est felis. Praesent pharetra nunc id arcu vehicula quis vulputate diam rutrum. Integer lorem orci, vehicula eu pellentesque non, cursus sed tortor. Donec orci orci, condimentum vel bibendum sed, porta eget mi. 
-			</p>
-		</cite>
 		<div class="slider-buttons">
-			<input type="button" class="slider-button" value="<">
-			<input type="button" class="slider-button" value=">">
+			<div class="slider-button slider-button__left-button" role="button to switch the article to the left"></div>
+			<div class="slider-button slider-button__right-button" role="button to switch the article to the right"></div>
 		</div>
 	</div>
 
