v.0.7.0 Added adaptive slider and some animations

--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
 	<!-- start persons slider -->
 
 	<section class="persons-slider-section">
-		<input type="button" value="<" class="person-slider__button" >
-		<div class="persons-slider container">
-			<div class="persons-slider__card">
+		<input type="button" value="<" class="person-slider__button person-slider__button-left" >
+		<div class="persons-slider container" id="persons-container">
+			<!-- div class="persons-slider__card">
 				<img src="img/slider/previews/prew_1.jpg" alt="James Smith" class="persons-slider__photo">
 				<h3 class="persons-slider__name">James Smith</h3>
 				<p class="persons-slider__description">
@@ -113,9 +113,9 @@
 				<p class="persons-slider__description">
 					Quisque gravida felis eu massa consectetur at malesuada .
 				</p>
-			</div>
+			</div> -->
 		</div>
-		<input type="button" value=">" class="person-slider__button" >
+		<input type="button" value=">" class="person-slider__button person-slider__button-right" >
 	</section>
 
 	<!-- end persons slider -->
