--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="One-page portfolio website written in pure css, html using pure javascript and css animations">
 	<link rel="stylesheet" href="style.css">
-	<title>Create</title>
+	<title>Create landing page</title>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
 	<script src="script.js" defer></script>
 </head>
@@ -85,36 +86,7 @@
 
 	<section class="persons-slider-section">
 		<input type="button" value="<" class="person-slider__button person-slider__button-left" >
-		<div class="persons-slider container" id="persons-container">
-			<!-- div class="persons-slider__card">
-				<img src="img/slider/previews/prew_1.jpg" alt="James Smith" class="persons-slider__photo">
-				<h3 class="persons-slider__name">James Smith</h3>
-				<p class="persons-slider__description">
-					Quisque gravida felis eu massa consectetur at malesuada .
-				</p>
-			</div>
-			<div class="persons-slider__card">
-				<img src="img/slider/previews/prew_2.jpg" alt="Bob Max" class="persons-slider__photo">
-				<h3 class="persons-slider__name">Bob Max</h3>
-				<p class="persons-slider__description">
-					Quisque gravida felis eu massa consectetur at malesuada .
-				</p>
-			</div>
-			<div class="persons-slider__card">
-				<img src="img/slider/previews/prew_3.jpg" alt="Blaz Robar" class="persons-slider__photo">
-				<h3 class="persons-slider__name">Blaz Robar</h3>
-				<p class="persons-slider__description">
-					Quisque gravida felis eu massa consectetur at malesuada .
-				</p>
-			</div>
-			<div class="persons-slider__card">
-				<img src="img/slider/previews/prew_4.jpg" alt="Jane Wally" class="persons-slider__photo">
-				<h3 class="persons-slider__name">Jane Wally</h3>
-				<p class="persons-slider__description">
-					Quisque gravida felis eu massa consectetur at malesuada .
-				</p>
-			</div> -->
-		</div>
+		<div class="persons-slider container" id="persons-container"></div>
 		<input type="button" value=">" class="person-slider__button person-slider__button-right" >
 	</section>
 
