--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 
 	<div class="description-area container">
 		<div class="slider-buttons">
-			<div class="slider-button slider-button__left-button" role="button to switch the article to the left"></div>
-			<div class="slider-button slider-button__right-button" role="button to switch the article to the right"></div>
+			<a class="slider-button slider-button__left-button" href="#" aria-label="left buton"></a>
+			<a class="slider-button slider-button__right-button" href="#" aria-label="right buton"></a>
 		</div>
 	</div>
 
