--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 
 	<div class="description-area container">
 		<div class="slider-buttons">
-			<a class="slider-button slider-button__left-button" href="#" aria-label="left buton"></a>
-			<a class="slider-button slider-button__right-button" href="#" aria-label="right buton"></a>
+			<input type="button" value="<" class="slider-button slider-button__left-button" name="left button">
+			<input type="button" value=">" class="slider-button slider-button__right-button" name="right button">
 		</div>
 	</div>
 
