--- a/index.html
+++ b/index.html
@@ -214,10 +214,12 @@
 				<p class="footer__description">
 					Quisque turpis lorem, vehicula eget rhoncus vel, ultricies ac mauris. Morbi lectus velit, tincidunt congue pharetra eu, varius nec libero. Vivamus justo risus, dignissim ac vestibulum eget, egestas rutrum magna. Etiam malesuada nisi et nisl volutpat tristique. 
 				</p>
-				<label class="footer__form">
-					<input type="text" placeholder="Join Our Newsletter Here" class="footer__form__text-input" required>
-					<input type="submit" value="Join" class="footer__form__button">
-				</label>
+				<form action="#" method="post" name="join-form" class="footer__form">
+					<label class="footer__form">
+						<input type="text" placeholder="Join Our Newsletter Here" class="footer__form__text-input" required>
+						<input type="submit" value="Join" class="footer__form__button">
+					</label>
+				</form>
 			</div>
 			<div class="social-icons footer-icons">
 				<a href="#" class="social-icons__link facebook-icon" aria-label="facebook icon"></a>
